VTK - try fixed table column with 'width: 1%' and 'white-space: nowrap'

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -1296,7 +1296,7 @@ p#vrtx-file-upload-info-text {
 }
 
 #directory-listing th#vrtx-report-last-modified {
-  width: 19%;
+  width: 1%;
 }
 
 #directory-listing th#vrtx-report-modified-by {
